--- a/src/style.css
+++ b/src/style.css
@@ -199,14 +199,15 @@ div.main h1 {
 
 
 div.signUpForm {
-    background-color: #c7c7c7;
     text-align: center;
     display: block;
     width: 200px;
     margin-left: auto;
     margin-right: auto;
-    box-shadow: 5px 5px;
+    margin-top: 350px;
     padding: 20px;
+    line-height: 30px;
+    outline: 4px solid white;
 }
 
 
