--- a/src/style.css
+++ b/src/style.css
@@ -127,7 +127,6 @@ div.main {
     background-image: url('../img/tetris.png');
     background-repeat: no-repeat;
     background-position: center;
-    background-position: fixed;
     background-size: 95%;
 
 
@@ -329,3 +328,35 @@ label[for=radioNo] {
     margin-top: 20px;
 }
 
+/*
+Tetris
+*/
+
+.tetris-bg {
+    display: block;
+    width: 300px;
+    height: 600px;
+    color: #c7c7c7;
+    background-color: #c7c7c7;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+button #start {
+    margin-top: 30px;
+    line-height: 50px;
+    border-radius: 10px;
+    font-size: 16px;
+    padding: 0 10px;
+}
+
+button #start:active {
+    visibility: hidden;
+}
+
+img #grid {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    color: red;
+}
