--- a/src/style.css
+++ b/src/style.css
@@ -346,6 +346,13 @@ Tetris
     width: 30px;
     height: 30px;
     background-color: blue;
+    transition-duration: 0.5s;
+}
+
+.taken {
+    width: 30px;
+    height: 30px;
+    background-color: blue;
 }
 
 button #start {
