--- a/src/style.css
+++ b/src/style.css
@@ -337,21 +337,21 @@ Tetris
     height: 600px;
     margin-left: auto;
     margin-right: auto;
-    display: flex;
-    flex-wrap: wrap;
     background-color: yellow;
 }
 
 .block {
     width: 30px;
     height: 30px;
+    position: relative;
+    float: left;
     background-color: blue;
 }
 
 .taken {
     width: 30px;
     height: 30px;
-    background-color: blue;
+    background-color: red;
 }
 
 button #start {
