--- a/src/style.css
+++ b/src/style.css
@@ -370,10 +370,13 @@ button #start:active {
     visibility: hidden;
 }
 
-img #grid {
+#tetris-back {
     margin: 0;
     padding: 0;
     border: 0;
-    color: red;
+    position: absolute;
+    top: 202px;
+    right: 609.5px;
+    z-index: 10;
 }
 
